force-app/main/default/objects/Log__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>ActionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>