force-app/main/default/objects/Log__c/fields/DataChanges__c.field-meta.xml
<CustomField>
    <fullName>DataChanges__c</fullName>
    <label>DataChanges</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>