force-app/main/default/objects/Log__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>